--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "akeneo_connector",
+    "name": "amphibee/akeneo-connector",
     "description": "Connect Akeneo with WooCommerce",
     "keywords": ["wordpress", "plugin"],
     "version": "0.0.1",
@@ -13,7 +13,14 @@
     "type": "wordpress-plugin",
     "require": {
         "php": ">=7.2.0",
-        "composer/installers": "v1.7.0"
+        "composer/installers": "v1.9.0"
+    },
+    "require-dev": {
+        "phpro/grumphp": "^0.20.0",
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "phpmd/phpmd": "^2.8",
+        "sebastian/phpcpd": "^6.0",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
         "psr-4": {
