--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,7 @@
 # editorconfig for Say Hello Projects
 
 [*]
-indent_style = tab
+indent_style = space
 indent_size = 4
 end_of_line = lf
 charset = utf-8
@@ -11,7 +11,7 @@ max_line_length = off
 tab_width=4
 
 [{*.html,*.shtm,*.shtml,*.htm,*.php,*.inc}]
-indent_style = tab
+indent_style = space
 tab_width = 4
 
 [{*.scss,*.css}]
