--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "http-interop/http-factory-guzzle": "^1.0",
         "symfony/serializer": "^5.2",
         "symfony/property-access": "^5.2",
-        "wp-cli/wp-cli": "^2.4"
+        "wp-cli/wp-cli": "^2.4",
+        "monolog/monolog": "^2.2"
     },
     "require-dev": {
         "phpro/grumphp": "^0.20.0",
