--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "amphibee/akeneo-connector",
     "description": "Connect Akeneo with WooCommerce. The plugin uses the Akeneo api to import Akeneo PIM data (attributes, products, variations..)",
     "keywords": ["wordpress", "plugin"],
-    "version": "1.13.0",
+    "version": "1.15.0",
     "homepage": "https://amphibee.fr",
     "license": "GPL-3.0+",
     "authors": [
@@ -29,8 +29,7 @@
         "monolog/monolog": "^2.2",
         "akeneo/api-php-client-ee": "^6.0",
         "tgeorgel/objectpress": " dev-dev-2.0",
-        "amphibee/hookable": " dev-main",
-        "ext-json": "*"
+        "amphibee/hookable": " dev-main"
     },
     "require-dev": {
         "phpro/grumphp": "^0.20.0",
@@ -42,6 +41,11 @@
     "autoload": {
         "psr-4": {
             "AmphiBee\\AkeneoConnector\\":"src/"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "phpro/grumphp": true
         }
     }
 }
