--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "amphibee/akeneo-connector",
     "description": "Connect Akeneo with WooCommerce. The plugin uses the Akeneo api to import Akeneo PIM data (attributes, products, variations..)",
     "keywords": ["wordpress", "plugin"],
-    "version": "1.20.0",
+    "version": "1.21",
     "homepage": "https://amphibee.fr",
     "license": "GPL-3.0+",
     "authors": [
@@ -18,8 +18,8 @@
     ],
     "type": "wordpress-plugin",
     "require": {
-        "php": ">=7.2.0",
-        "composer/installers": "v1.9.0",
+        "php": ">=7.4.0",
+        "composer/installers": "^2.2",
         "akeneo/api-php-client": "^6.0",
         "php-http/guzzle7-adapter": "^1.0",
         "http-interop/http-factory-guzzle": "^1.0",
